# baserow-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: release-please.yml  rust.yml
examples/: create_one.rs  field_names.rs  table_by_id.rs  tracing.rs  typed_row.rs  typed_rows.rs  update.rs
src/: error.rs  filter.rs  lib.rs  mapper.rs
src/api/: authentication.rs  client.rs  file.rs  mod.rs  table.rs  table_operations.rs
