[package]
name = "baserow-rs"
description = "A Rust client for the Baserow API."
version = "0.5.1"
edition = "2021"
categories = ["database"]
license = "Apache-2.0"
repository = "https://github.com/cedricziel/baserow-rs"
issues = "https://github.com/cedricziel/baserow-rs/issues"

[dependencies]
reqwest = { version = "0.12.9", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
thiserror = "2.0.8"
mime_guess = "2.0.5"

[dev-dependencies]
mockito = "1.6.0"
tokio = { version = "1", features = ["macros", "rt"] }
