[package]
name = "baserow-rs"
description = "A Rust client for the Baserow API."
version = "2.0.5"
edition = "2021"
categories = ["database"]
license = "Apache-2.0"
repository = "https://github.com/cedricziel/baserow-rs"

[dependencies]
tracing = { version = "0.1", features = ["attributes"] }
tracing-futures = "0.2"
async-trait = "0.1.88"
reqwest = { version = "0.12.22", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.15", features = ["codec"] }
thiserror = "2.0.12"
mime_guess = "2.0.5"

[dev-dependencies]
mockito = "1.7.0"
tokio = { version = "1", features = ["macros", "rt"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
